Use collection factory methods
Replace the usages of emptyMap() singletonMap() and singletonList() with
the respective collection factory method. This avoids issue with gson
serialization and private access on virtual machines that enforce strong
encapsulation.